--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                 food experience in both casual and fine dining environment.
               </p>
               <div class="button__wrapper">
-                <a href="./menu.html" class="btn primary-btn">Explore Menu</a>
-                <a href="./booking.html" class="btn">Book Table</a>
+                <a href="../pages/menu.html" class="btn primary-btn">Explore Menu</a>
+                <a href="../pages/booking.html" class="btn">Book Table</a>
               </div>
             </div>
           </div>
@@ -152,36 +152,32 @@
           <div class="ourSpecials__left">
             <div class="ourSpecials__item">
               <div class="ourSpecials__item__img">
-                <img src="../img/food-3.png" alt="food img" />
+                <img src="../img/Comtronbibimbap.png" alt="food img" />
               </div>
-              <h2 class="ourSpecials__item__title">Sweet Potato Fries Bowl</h2>
-              <h3 class="ourSpecials__item__price">$18</h3>
+              <h2 class="ourSpecials__item__title">Cơm trộn Hàn Quốc Bibimbap</h2>
+              <h3 class="ourSpecials__item__price">$20</h3>
               <div class="ourSpecials__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
               <p class="ourSpecials__item_text">
-                These Sweet Potato Fries bowl are glorious, messsy plate of
-                goodness. Crispy sweet potato fries loaded with lots of fresh
-                summner vegetables and a lime ranch. By adding a seasoning blend
-                with chipotle powder, garlic, and onion, these spicy sweet
-                potato fries are full of flavor.
+                Chắc hẳn không một bạn trẻ nào lại không biết đến món ăn Hàn Quốc quốc dân này.
+                Bibimbap là món cơm trộn kết hợp với nhiều nguyên liệu đầy màu sắc như: màu trắng của cơm, màu vàng của trứng, màu đỏ của kim chi, màu cam của cà rốt, màu đen của rong biển… 
+                Tất cả sẽ được trộn đều với nước sốt làm từ ớt trước khi ăn tạo nên một hương vị ngon khó cưỡng.
               </p>
             </div>
             <div class="ourSpecials__item">
               <div class="ourSpecials__item__img">
-                <img src="../img/food-3.png" alt="food img" />
+                <img src="../img/kimpap.png" alt="food img" />
               </div>
-              <h2 class="ourSpecials__item__title">Sweet Potato Fries Bowl</h2>
+              <h2 class="ourSpecials__item__title">Kimbap - Món nổi tiếng Hàn Quốc</h2>
               <h3 class="ourSpecials__item__price">$18</h3>
               <div class="ourSpecials__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
               <p class="ourSpecials__item_text">
-                These Sweet Potato Fries bowl are glorious, messsy plate of
-                goodness. Crispy sweet potato fries loaded with lots of fresh
-                summner vegetables and a lime ranch. By adding a seasoning blend
-                with chipotle powder, garlic, and onion, these spicy sweet
-                potato fries are full of flavor.
+                Đây được xem là món ăn Hàn Quốc quen thuộc của các tín đồ đam mê ẩm thực Hàn.
+                Nguyên liệu chính của Kimbap là rong biển và cơm trắng, sau đó sẽ thêm rau xào, thịt bò, trứng chiên, xúc xích,... rồi cuộn lại bên trong lá rong biển và cắt thành từng khoanh tròn vừa ăn.
+                Món ăn này trông có vẻ đơn giản nhưng lại bắt miệng đến lạ, đó cũng là lý do khiến Kimbap trở thành một trong  những món ăn đặc trưng của xứ Hàn.
               </p>
             </div>
           </div>
@@ -206,11 +202,11 @@
         <div class="dishGrid__wrapper">
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/canhbo.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Vegan Salad bowl</h3>
-              <h3 class="dishGrid_item_price">$13</h3>
+              <h3 class="dishGrid__item__title">Canh Bò</h3>
+              <h3 class="dishGrid_item_price">$20</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
@@ -218,11 +214,11 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/mylanh.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Vegan Salad bowl</h3>
-              <h3 class="dishGrid_item_price">$13</h3>
+              <h3 class="dishGrid__item__title">Mỳ Lạnh</h3>
+              <h3 class="dishGrid_item_price">$12</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
@@ -230,11 +226,11 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/tokbokki.jpg" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Vegan Salad bowl</h3>
-              <h3 class="dishGrid_item_price">$13</h3>
+              <h3 class="dishGrid__item__title">Tokbokki</h3>
+              <h3 class="dishGrid_item_price">$10</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
@@ -346,9 +342,9 @@
             <h2 class="whyUs__title">Why Choose Our Food</h2>
             <p class="whyUs__text">
               Quality of Service, Food, Ambiance, and Value of Money are the
-              primary elements for choosing a restaurant. Shaif's Cuisine is one
-              of the most exquiste fine-dinning restaurant in Chittagong cities
-              with a captivating view of GEC Hills, perfect ambiance, and
+              primary elements for choosing a restaurant. K-Food is one
+              of the most exquiste fine-dinning restaurant in Ha Dong district 
+              with a captivating view of Ho Tay, perfect ambiance, and
               scrumptious food.
             </p>
           </div>
@@ -468,7 +464,7 @@
             <h3 class="newsletter__title">Join Newsletter</h3>
             <p class="newsletter__text">
               Get notified with the latest news and recent offers from the
-              “Shaif’s Cuisine”
+              “K-Food”
             </p>
           </div>
           <div class="newsletter__form">
@@ -493,7 +489,7 @@
               <img src="../img/logo.png" alt="#" />
             </div>
             <p class="footer__desc">
-              Fresh and delicious traditional Bangladeshi food to delight the
+              Fresh and delicious traditional Ha Dong food to delight the
               whole family.
             </p>
             <div class="footer__socials">
@@ -602,13 +598,13 @@
             <h3 class="footer__text__title">Contact</h3>
             <ol class="footer__text">
               <li>
-                <a href="tel:+880123">+880123</a>
+                <a href="tel:+880123">0981 458 371</a>
               </li>
               <li>
-                <a href="mailto:webcifar@gmail.com">webcifar@gmail.com</a>
+                <a href="mailto:webcifar@gmail.com">kfood@gmail.com</a>
               </li>
               <li>
-                <a href="#">GEC Circle, Chittagong, Bangladeshi</a>
+                <a href="#">Ngo 181, Ha Dong, Ha Noi</a>
               </li>
             </ol>
           </div>
@@ -618,7 +614,7 @@
     <div id="copyright">
       <div class="container">
         <p class="copyright__text">
-          Copyright 2021 Shaif's Cuisine | All rights reserved
+           Copyright <i class="fa fa-copyright"></i> 2022 Nhóm 7 | All rights reserved
         </p>
       </div>
     </div>
@@ -631,3 +627,4 @@
     <script src="../scripts/main.js"></script>
   </body>
 </html>
+
