--- a/pages/menu.html
+++ b/pages/menu.html
@@ -21,7 +21,7 @@
     <div class="nav">
       <div class="container">
         <div class="nav__wrapper">
-          <a href="./index.html" class="logo">
+          <a href="../index.html" class="logo">
             <img src="../img/logo.png" alt="#" />
           </a>
           <nav>
@@ -104,13 +104,13 @@
         <div class="ourSpecicals__wrapper">
           <div class="ourSpecicals__item">
             <div class="ourSpecicals__item__img">
-              <img src="../img/food-3.png" alt="food" />
+              <img src="../img/kimpap.png" alt="food" />
             </div>
             <div class="ourSpecicals__item__info">
               <h3 class="ourSpecicals__item__tittle">
-                Sweet Potato Fries Bowl
+                Kimbap - Món nổi tiếng Hàn Quốc
               </h3>
-              <h4 class="ourSpecicals__item__price">$12</h4>
+              <h4 class="ourSpecicals__item__price">$18</h4>
               <div class="ourSpecicals__item__stars">
                 <img src="../img/3star.svg" alt="stars" />
               </div>
@@ -118,13 +118,13 @@
           </div>
           <div class="ourSpecicals__item">
             <div class="ourSpecicals__item__img">
-              <img src="../img/food-3.png" alt="food" />
+              <img src="../img/Comtronbibimbap.png" alt="food" />
             </div>
             <div class="ourSpecicals__item__info">
               <h3 class="ourSpecicals__item__tittle">
-                Sweet Potato Fries Bowl
+                Cơm trộn Hàn Quốc Bibimbap
               </h3>
-              <h4 class="ourSpecicals__item__price">$12</h4>
+              <h4 class="ourSpecicals__item__price">$20</h4>
               <div class="ourSpecicals__item__stars">
                 <img src="../img/3star.svg" alt="stars" />
               </div>
@@ -141,10 +141,22 @@
         <div class="dishGrid__wrapper">
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/canhbo.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
+              <h3 class="dishGrid__item__title">Canh bò</h3>
+              <h3 class="dishGrid__item__price">$20</h3>
+              <div class="dishGrid__item__stars">
+                <img src="../img/3star.svg" alt="3 star" />
+              </div>
+            </div>
+          </div>
+          <div class="dishGrid__item">
+            <div class="dishGrid__item__img">
+              <img src="../img/mylanh.png" alt="food img" />
+            </div>
+            <div class="dishGrid__item__info">
+              <h3 class="dishGrid__item__title">Mỳ Lạnh</h3>
               <h3 class="dishGrid__item__price">$12</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
@@ -153,22 +165,10 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/tokbokki.jpg" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
-              <div class="dishGrid__item__stars">
-                <img src="../img/3star.svg" alt="3 star" />
-              </div>
-            </div>
-          </div>
-          <div class="dishGrid__item">
-            <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
-            </div>
-            <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
+              <h3 class="dishGrid__item__title">Tokbokki</h3>
               <h3 class="dishGrid__item__price">$12</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
@@ -186,11 +186,11 @@
         <div class="dishGrid__wrapper">
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/chao.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__title">Cháo gà DakJuk</h3>
+              <h3 class="dishGrid__item__price">$15</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -198,11 +198,11 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/kimchi.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__title">Bánh KimChi</h3>
+              <h3 class="dishGrid__item__price">$10</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -210,11 +210,11 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/hotdog.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__title">Hot Dog</h3>
+              <h3 class="dishGrid__item__price">$10</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -222,11 +222,11 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/hottoek.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__title">Bánh PanCake</h3>
+              <h3 class="dishGrid__item__price">$13</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -234,11 +234,11 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/mijang.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__title">Mỳ Jajangmyeon</h3>
+              <h3 class="dishGrid__item__price">$17</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -255,10 +255,34 @@
         <div class="dishGrid__wrapper">
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/gacay.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
+              <h3 class="dishGrid__item__title">Gà rán sốt cay</h3>
+              <h3 class="dishGrid__item__price">$18</h3>
+              <div class="dishGrid__item__stars">
+                <img src="../img/3star.svg" alt="3 star" />
+              </div>
+            </div>
+          </div>
+          <div class="dishGrid__item">
+            <div class="dishGrid__item__img">
+              <img src="../img/gacayphomai.png" alt="food img" />
+            </div>
+            <div class="dishGrid__item__info">
+              <h3 class="dishGrid__item__title">Gà sốt Phomai</h3>
+              <h3 class="dishGrid__item__price">$18</h3>
+              <div class="dishGrid__item__stars">
+                <img src="../img/3star.svg" alt="3 star" />
+              </div>
+            </div>
+          </div>
+          <div class="dishGrid__item">
+            <div class="dishGrid__item__img">
+              <img src="../img/mienchien.png" alt="food img" />
+            </div>
+            <div class="dishGrid__item__info">
+              <h3 class="dishGrid__item__title">Miến cuộn </h3>
               <h3 class="dishGrid__item__price">$12</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
@@ -267,11 +291,11 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/suonnuong.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__title">Sườn nướng</h3>
+              <h3 class="dishGrid__item__price">$22</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -279,35 +303,11 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/canhkhoaiham.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
-              <div class="dishGrid__item__stars">
-                <img src="../img/3star.svg" alt="3 star" />
-              </div>
-            </div>
-          </div>
-          <div class="dishGrid__item">
-            <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
-            </div>
-            <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
-              <div class="dishGrid__item__stars">
-                <img src="../img/3star.svg" alt="3 star" />
-              </div>
-            </div>
-          </div>
-          <div class="dishGrid__item">
-            <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
-            </div>
-            <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__title">Canh khoai tây</h3>
+              <h3 class="dishGrid__item__price">$18</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -324,11 +324,11 @@
         <div class="dishGrid__wrapper">
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/canhgaham.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__title">Canh gà hầm</h3>
+              <h3 class="dishGrid__item__price">$22</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -336,11 +336,12 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/canhdaukho.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__title">Canh đậu tương
+              </h3>
+              <h3 class="dishGrid__item__price">$22</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -348,11 +349,11 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/supdauphukho.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__title">Súp đậu kho</h3>
+              <h3 class="dishGrid__item__price">$19</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -360,11 +361,11 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/canhbo.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__title">Canh bò</h3>
+              <h3 class="dishGrid__item__price">$20</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -372,11 +373,11 @@
           </div>
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
-              <img src="../img/food-1.png" alt="food img" />
+              <img src="../img/cua.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Green Bowl</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__title">Cua ngâm tương</h3>
+              <h3 class="dishGrid__item__price">$25</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -504,13 +505,13 @@
             <h3 class="footer__text__title">Contact</h3>
             <ol class="footer__text">
               <li>
-                <a href="tel:+880123">+880123</a>
+                <a href="tel:+880123">0981 458 371</a>
               </li>
               <li>
-                <a href="mailto:webcifar@gmail.com">webcifar@gmail.com</a>
+                <a href="mailto:webcifar@gmail.com">kfood@gmail.com</a>
               </li>
               <li>
-                <a href="#">GEC Circle, Chittagong, Bangladeshi</a>
+                <a href="#">Ngo 181, Ha Dong, Ha Noi</a>
               </li>
             </ol>
           </div>
@@ -520,7 +521,7 @@
     <div id="copyright">
       <div class="container">
         <p class="copyright__text">
-          Copyright 2021 Shaif's Cuisine | All rights reserved
+           Copyright <i class="fa fa-copyright"></i> 2022 Nhóm 7 | All rights reserved
         </p>
       </div>
     </div>
