--- a/pages/booking.html
+++ b/pages/booking.html
@@ -273,7 +273,7 @@
             <h3 class="footer__text__title">Contact</h3>
             <ol class="footer__text">
               <li>
-                <a href="tel:+880123">+880123</a>
+                <a href="tel:0981 458 371">0981 458 371</a>
               </li>
               <li>
                 <a href="mailto:webcifar@gmail.com">webcifar@gmail.com</a>
