--- a/index.html
+++ b/index.html
@@ -337,9 +337,8 @@
       </div>
     </section>
     <!--End Events In4 Section-->
-
-    <!-- Why us section-->
-    <section id="whyUS">
+    <!-- Why Us section -->
+    <section id="whyUs">
       <div class="container">
         <div class="whyUs__wrapper">
           <div class="whyUs__left" data-aos="fade-right">
@@ -347,7 +346,7 @@
             <p class="whyUs__text">
               Quality of Service, Food, Ambiance, and Value of Money are the
               primary elements for choosing a restaurant. Shaif's Cuisine is one
-              of the most exquiste fine-dinning restaurant in Chittagong cities
+              of the most exquisite fine-dinning restaurant in Chittagong cities
               with a captivating view of GEC Hills, perfect ambiance, and
               scrumptious food.
             </p>
@@ -356,7 +355,7 @@
             <div class="whyUs__items__wrapper">
               <div class="whyUs__item">
                 <div class="whyUs__item__icon">
-                  <img src="../img/whyUs-icon1.svg" alt="quality food" />
+                  <img src="../img/whyUs-icon1.svg" alt="quality Food" />
                 </div>
                 <p class="whyUs__item__text">Quality Food</p>
               </div>
@@ -383,83 +382,84 @@
         </div>
       </div>
     </section>
-    <!-- End why us section-->
-    <!-- Testimonial section-->
-    <section id="testimonial" data-aos="fade-up">
-      <div class="contaier">
-        <div class="testimonial__wrapper">
-          <h2 class="testimonial__title">
-            <div class="testimonial__items__wrapper">
-              <div class="testimonial__item">
-                <div class="testimonial__item__image">
-                  <img src="../img/testimonial_img1.png" alt="sayed ahmed" />
-                </div>
-                <div class="testimonial__item__info">
-                  <h3 class="testimonial__item__name">Sayed Ahmed</h3>
-                  <div class="testimonial__item__stars">
-                    <img src="../img/3star.svg" alt="stars" />
-                  </div>
-                  <p class="testimonial__item__text">
-                    "Visited Shaif's Cuisine with friends last Sunday. Really
-                    lovely meal and very warm welcome - we would recommend this
-                    lovely restaurant and will try to go back again"
-                  </p>
-                </div>
+    <!-- End Why Us section -->
+    <!-- Testimonial Section -->
+    <section id="testimonial">
+      <div class="container">
+        <div class="testimonial__wrapper" data-aos="fade-up">
+          <h2 class="testimonial__title">What Our Customers Say</h2>
+          <div class="testimonial__items__wrapper">
+            <div class="testimonial__item">
+              <div class="testimonial__item__img">
+                <img src="../img/testimonial_img1.png" alt="Sayed Ahmed" />
               </div>
-              <div class="testimonial__item">
-                <div class="testimonial__item__image">
-                  <img src="../img/testimonial_img1.png" alt="sayed ahmed" />
+              <div class="testimonial__item__info">
+                <h3 class="testimonial__item__name">Sayed Ahmed</h3>
+                <div class="testimonial__item__stars">
+                  <img src="../img/3star.svg" alt="3 star" />
                 </div>
-                <div class="testimonial__item__info">
-                  <h3 class="testimonial__item__name">Sayed Ahmed</h3>
-                  <div class="testimonial__item__stars">
-                    <img src="../img/3star.svg" alt="stars" />
-                  </div>
-                  <p class="testimonial__item__text">
-                    "Visited Shaif's Cuisine with friends last Sunday. Really
-                    lovely meal and very warm welcome - we would recommend this
-                    lovely restaurant and will try to go back again"
-                  </p>
-                </div>
-              </div>
-              <div class="testimonial__item">
-                <div class="testimonial__item__image">
-                  <img src="../img/testimonial_img1.png" alt="sayed ahmed" />
-                </div>
-                <div class="testimonial__item__info">
-                  <h3 class="testimonial__item__name">Sayed Ahmed</h3>
-                  <div class="testimonial__item__stars">
-                    <img src="../img/3star.svg" alt="stars" />
-                  </div>
-                  <p class="testimonial__item__text">
-                    "Visited Shaif's Cuisine with friends last Sunday. Really
-                    lovely meal and very warm welcome - we would recommend this
-                    lovely restaurant and will try to go back again"
-                  </p>
-                </div>
-              </div>
-              <div class="testimonial__item">
-                <div class="testimonial__item__image">
-                  <img src="../img/testimonial_img1.png" alt="sayed ahmed" />
-                </div>
-                <div class="testimonial__item__info">
-                  <h3 class="testimonial__item__name">Sayed Ahmed</h3>
-                  <div class="testimonial__item__stars">
-                    <img src="../img/3star.svg" alt="stars" />
-                  </div>
-                  <p class="testimonial__item__text">
-                    "Visited Shaif's Cuisine with friends last Sunday. Really
-                    lovely meal and very warm welcome - we would recommend this
-                    lovely restaurant and will try to go back again"
-                  </p>
-                </div>
+                <p class="testimonial__item__text">
+                  “Visited Shaif’s Cuisine with friends last Sunday. Really
+                  lovely meal and very warm welcome – we would recommend this
+                  lovely restaurant and will try to go back again”
+                </p>
               </div>
             </div>
-          </h2>
+            <div class="testimonial__item">
+              <div class="testimonial__item__img">
+                <img src="../img/testimonial_img1.png" alt="Sayed Ahmed" />
+              </div>
+              <div class="testimonial__item__info">
+                <h3 class="testimonial__item__name">Arfan</h3>
+                <div class="testimonial__item__stars">
+                  <img src="../img/3star.svg" alt="3 star" />
+                </div>
+                <p class="testimonial__item__text">
+                  "from start to finish, lovely experience. Hostess very
+                  pleasant, wait staff john was wonderful and attentive, food
+                  plentiful and delicious, desserts out of this world"
+                </p>
+              </div>
+            </div>
+            <div class="testimonial__item">
+              <div class="testimonial__item__img">
+                <img src="../img/testimonial_img1.png" alt="Sayed Ahmed" />
+              </div>
+              <div class="testimonial__item__info">
+                <h3 class="testimonial__item__name">Fahim & Nishat</h3>
+                <div class="testimonial__item__stars">
+                  <img src="../img/3star.svg" alt="3 star" />
+                </div>
+                <p class="testimonial__item__text">
+                  “A warm and friendly welcome with fantastic customer service.
+                  Always great, tasty food served piping hot- just the way we
+                  love it . Would definitely recommend. We have been repeatedly
+                  and it's consistently exceeded our expectations"
+                </p>
+              </div>
+            </div>
+            <div class="testimonial__item">
+              <div class="testimonial__item__img">
+                <img src="../img/testimonial_img1.png" alt="Sayed Ahmed" />
+              </div>
+              <div class="testimonial__item__info">
+                <h3 class="testimonial__item__name">Hussain</h3>
+                <div class="testimonial__item__stars">
+                  <img src="../img/3star.svg" alt="3 star" />
+                </div>
+                <p class="testimonial__item__text">
+                  “I would just like to say thank you for the excellent service
+                  we received in your restaurant last night. Although the place
+                  was very busy we still had an excellent time and really
+                  appreciated the live entertainment too!“
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
-    <!-- End Testimonial section-->
+    <!-- End Testimonial Section -->
     <!-- Newsletter Section -->
     <section id="newsletter" data-aos="fade-up">
       <div class="container">
@@ -602,7 +602,7 @@
             <h3 class="footer__text__title">Contact</h3>
             <ol class="footer__text">
               <li>
-                <a href="tel:+880123">+880123</a>
+                <a href="tel:0981 458 371">0981 458 371</a>
               </li>
               <li>
                 <a href="mailto:webcifar@gmail.com">webcifar@gmail.com</a>
