--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,7 +62,7 @@
               </div>
               <div class="nav__list__wrapper">
                 <li>
-                  <a href="./index.html" class="nav__link"> Home </a>
+                  <a href="../index.html" class="nav__link"> Home </a>
                 </li>
                 <li>
                   <a href="../pages/menu.html" class="nav__link"> Menu </a>
@@ -320,7 +320,7 @@
             <h3 class="footer__text__title">Contact</h3>
             <ol class="footer__text">
               <li>
-                <a href="tel:+880123">+880123</a>
+                <a href="tel:0981 458 371">0981 458 371</a>
               </li>
               <li>
                 <a href="mailto:webcifar@gmail.com">webcifar@gmail.com</a>
